fix: added alignement to 0

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -367,7 +367,10 @@ footer ul {
 
 .card-work .card-title a::after {
 	position: absolute;
-	inset: 0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	content: "";
 }
 
